2002-06-12  Damon Chaplin  <damon@ximian.com>

	* test/Makefile.am (INCLUDES): 
	* src/Makefile.am (INCLUDES): 
	* components/tree/Makefile.am (INCLUDES): 
	* components/throbber/Makefile.am (INCLUDES): 
	* components/text/Makefile.am (INCLUDES): 
	* components/notes/Makefile.am (INCLUDES): 
	* components/news/Makefile.am (INCLUDES): 
	* components/music/Makefile.am (INCLUDES): 
	* components/history/Makefile.am (INCLUDES): 
	* components/hardware/Makefile.am (INCLUDES): use
	$(prefix)/${DATADIRNAME}/locale rather than $(datadir)/locale so
	it works on Solaris.

2002-06-03  David Emory Watson  <dwatson@cs.ucr.edu>

	* src/file-manager/fm-list-view.c:
	(get_derfault_zoom_level): New, protects us from illegal preferences.
	(set_zoom_level_from_metadata_and_preferences),
	(fm_list_view_reset_to_defaults),
	(fm_list_view_set_zoom_level),
	(fm_list_view_restore_default_zoom_level): Update.
	(fm_list_view_scale_font_size): Replace switch with loop and always
	use default font at default zoom level.
	(click_policy_changed_callback): Make underlines appear or disappear
	when the click policy changes.

2002-06-02  David Emory Watson  <dwatson@cs.ucr.edu>

	* components/text/nautilus-text-view.c:
	(nautilus_text_view_instance_init): Turn on word wrapping.

2002-06-12  Alexander Larsson  <alla@lysator.liu.se>

	* libnautilus-private/nautilus-program-chooser.c: change
	vbox spacing to 5.

	Patch from Jorn Baayen  <jorn@nl.linux.org>

2002-06-11  Alexander Larsson  <alla@lysator.liu.se>

	* src/nautilus-window.h (nautilus_window_save_geometry): 
	* src/nautilus-window-manage-views.c (determined_initial_view_callback): 
	* src/nautilus-application.c (nautilus_application_create_window):
	Fix indentation.

	* NEWS:
	Update version

	* configure.in:
	Bump requirements to latest versions.

2002-06-10  Frank Worsley  <fworsley@shaw.ca>

	* src/nautilus-application.c: 
	* src/nautilus-window-manage-views.c:
	* src/nautilus-window.c: 
	* src/nautilus-window.h: